deliverables one and two

--- a/movies.ipynb
+++ b/movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "id": "b0b202f6",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,10 @@
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "from sqlalchemy import create_engine\n",
+    "from config import db_password\n",
+    "import time"
    ]
   },
   {
@@ -1051,39 +1054,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>19515397</th>\n",
-       "      <td>202655</td>\n",
-       "      <td>1278</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>952053044</td>\n",
+       "      <th>5006763</th>\n",
+       "      <td>51535</td>\n",
+       "      <td>595</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>950583054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14115826</th>\n",
-       "      <td>146655</td>\n",
-       "      <td>1357</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>940243052</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25862800</th>\n",
-       "      <td>269086</td>\n",
-       "      <td>6333</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1395852652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25631438</th>\n",
-       "      <td>266720</td>\n",
-       "      <td>1635</td>\n",
+       "      <th>3897316</th>\n",
+       "      <td>40503</td>\n",
+       "      <td>802</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>975556216</td>\n",
+       "      <td>860067955</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2346574</th>\n",
-       "      <td>24312</td>\n",
-       "      <td>6979</td>\n",
+       "      <th>2785869</th>\n",
+       "      <td>28939</td>\n",
+       "      <td>1387</td>\n",
        "      <td>3.5</td>\n",
-       "      <td>1266474220</td>\n",
+       "      <td>1493827127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18068617</th>\n",
+       "      <td>187619</td>\n",
+       "      <td>4393</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1447027058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16815073</th>\n",
+       "      <td>174749</td>\n",
+       "      <td>87232</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1320755817</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1091,11 +1094,11 @@
       ],
       "text/plain": [
        "          userId  movieId  rating   timestamp\n",
-       "19515397  202655     1278     4.0   952053044\n",
-       "14115826  146655     1357     4.0   940243052\n",
-       "25862800  269086     6333     4.0  1395852652\n",
-       "25631438  266720     1635     3.0   975556216\n",
-       "2346574    24312     6979     3.5  1266474220"
+       "5006763    51535      595     5.0   950583054\n",
+       "3897316    40503      802     3.0   860067955\n",
+       "2785869    28939     1387     3.5  1493827127\n",
+       "18068617  187619     4393     5.0  1447027058\n",
+       "16815073  174749    87232     4.0  1320755817"
       ]
      },
      "execution_count": 12,
@@ -2963,9 +2966,9 @@
       "text/plain": [
        "False                                                                                                                             45454\n",
        "True                                                                                                                                  9\n",
+       " - Written by Ørnås                                                                                                                   1\n",
        " Avalanche Sharks tells the story of a bikini contest that turns into a horrifying affair when it is hit by a shark avalanche.        1\n",
        " Rune Balot goes to a casino connected to the October corporation to try to wrap up her case once and for all.                        1\n",
-       " - Written by Ørnås                                                                                                                   1\n",
        "Name: adult, dtype: int64"
       ]
      },
@@ -4774,11 +4777,11 @@
        "(English, French)                               35\n",
        "(English, Japanese)                             25\n",
        "                                              ... \n",
+       "(French, English, Persian, German)               1\n",
+       "(English, Mende, Spanish, Portuguese)            1\n",
+       "English/Arabic                                   1\n",
+       "English, Vietnamese, Japanese                    1\n",
        "(English, French, Mandarin Chinese, Hindi)       1\n",
-       "(English, French, Chinese, Urdu)                 1\n",
-       "(English, Japanese, French)                      1\n",
-       "(English, Russian, Ukrainian)                    1\n",
-       "(Egyptian Arabic, English)                       1\n",
        "Name: Language, Length: 198, dtype: int64"
       ]
      },
@@ -4808,15 +4811,15 @@
        "zh       4\n",
        "pt       4\n",
        "ja       4\n",
-       "da       2\n",
        "hi       2\n",
+       "da       2\n",
        "tr       1\n",
        "ko       1\n",
+       "ru       1\n",
+       "sv       1\n",
+       "ab       1\n",
        "he       1\n",
        "cn       1\n",
-       "sv       1\n",
-       "ru       1\n",
-       "ab       1\n",
        "ar       1\n",
        "Name: original_language, dtype: int64"
       ]
@@ -5574,8 +5577,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "eb9cd0fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/movie_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "1baedfc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(db_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "c8f38f48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_df.to_sql(name='movies', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "6f46192d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done. 34.27747893333435 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 63.647132873535156 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 92.53707695007324 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 122.07905888557434 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 150.44120502471924 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 177.1757791042328 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 204.68785190582275 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 233.75147104263306 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 261.6149182319641 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 291.1078579425812 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 321.0743680000305 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 349.3157470226288 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 378.9212670326233 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 405.8371379375458 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 435.8009259700775 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 464.3333020210266 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 493.8637409210205 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 523.5743181705475 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 553.212641954422 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 580.5473668575287 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 609.8941309452057 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 639.3590672016144 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 667.8490259647369 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 696.1456570625305 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 725.6655721664429 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 754.7615051269531 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 755.407243013382 total seconds elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows_imported = 0\n",
+    "# get the start_time from time.time()\n",
+    "start_time = time.time()\n",
+    "for data in pd.read_csv(f'{file_dir}ratings.csv', chunksize=1000000):\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "    data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "    rows_imported += len(data)\n",
+    "\n",
+    "    # add elapsed time to final print out\n",
+    "    print(f'Done. {time.time() - start_time} total seconds elapsed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0de1a679",
    "metadata": {},
    "outputs": [],
    "source": []
